--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin: 0px 95px;
+  /* margin: 0px 95px; */
   padding-top: 50px;
 }
 
@@ -15,8 +15,8 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-around;
-    padding: 0 50px;
-    padding-top: 50px
+    justify-content: space-between;
+    /* padding: 0 50px; */
+    padding-top: 50px;
   }
   
